lexer_parser/src/test/exempleFile/miniJaja/success/whileEmptyBody.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation du while	*/
/************************/

class whileEmptyBody {

	main {
        while(true){

        } ;

	}
}