lexer_parser/src/test/exempleFile/miniJaja/fail/whileEmptyCond.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation du while	*/
/************************/

class whileEmptyCond {

	main {
        while(){

        } ;

	}
}